<resources>
    <string name="app_name">Simtrader GPW</string>

    <!--wig20-->
    <string name="name">Nazwa:</string>
    <string name="ticker">Ticker:</string>
    <string name="last">Kurs:</string>
    <string name="percentageChange">Zmiana:</string>
    <string name="turnover">Obrót:</string>

    <!--wallet-->
    <string name="wallet_value">Wartość portfela</string>
    <string name="papers_value">Papiery</string>
    <string name="money">Środki pieniężne</string>
    <string name="wallet_details">Szczegóły portfela</string>
    <string name="pln_suffix">PLN</string>
    <string name="debt">Kredyt</string>

    <!--main menu-->
    <string name="wallet_btn">Portfel</string>
    <string name="orders_btn">Zlecenia</string>
    <string name="transactions_btn">Transakcje</string>
    <string name="showWIG20_btn">Notowania WIG20</string>
    <string name="statistics_btn">Statystyki</string>
    <string name="settings_btn">Ustawienia</string>

    <!--statistics-->
        <!--titles-->
    <string name="top_gainers">Najlepiej zarabiające</string>
    <string name="top_losers">Najbardziej tracące</string>
    <string name="top_active">Najaktywniejsze</string>
        <!--info-->
    <string name="instruments_growing">Liczba wzrastających spółek: </string>
    <string name="instruments_falling">Liczba spadających spółek: </string>
    <string name="instruments_unchanged">Liczba spółek bez zmian: </string>

    <!--orders-->
    <string name="new_order">Nowe zlecenie</string>
    <string name="paper">Spółka</string>
    <string name="buy_sell">K/S</string>
    <string name="quantity">Ilość</string>
    <string name="limit">Limit</string>
    <string name="current_orders">AKTYWNE ZLECENIA</string>


</resources>
